# cultist-adviser

./: .gitignore  CultistAdviser.spec  LICENSE  README.md  README.zh-CN.md  build_release.py  launcher.py  pyproject.toml
.github/workflows/: tests.yml
cultist_adviser/: achievement_guide_en.txt  achievements.py  advisor.py  backup.py  config.py  gui.py  knowledge.py  lexicon.py  recorder.py  review.py  save_parser.py  updater.py
dist_extra/: User Guide.txt  使用说明.txt  更新说明-Release Notes.txt
docs/: strategy_knowledge.md
raw/: 成就.txt
tests/: test_achievement_conditions.py  test_advisor.py  test_recorder_review.py  test_route_walkthrough.py
