[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cultist-adviser"
version = "0.1.0"
description = "Read-only floating adviser for Cultist Simulator — watches the save file, never the game window"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.urls]
Repository = "https://github.com/fivood/cultist-adviser"

[project.scripts]
cultist-adviser = "cultist_adviser.gui:main"

[tool.setuptools]
packages = ["cultist_adviser"]
